# KBGPT

./: .dockerignore  .env.ecr.example  .env.example  .env.production.example  .gitignore  AUDIT_README_RAPPORT.md  CLAUDE.md  CProjectSAP_KBtemp_requirements.txt  ERREURS_BUILD_CORRIGES.md  LICENSE  NEXT_STEPS_PHASE1.md  PHASE1_SUMMARY.md  README.md  TASK_COMPLETE.md  analyze_cache.py  buildspec.yml  create_knowwhere_proto.py  dc.ps1  debug-helper.md  docker-compose.app.yml  docker-compose.build.yml  docker-compose.ecr.yml  docker-compose.graphiti.yml  docker-compose.infra.yml  docker-compose.monitoring.yml  docker-compose.yml  enterprise_sap.osmpack  import_logging.py  kw.README.md  kw.ps1  new_extract_metadata.txt  ngrok.yml  osmose_live.txt  patch_pdf_use_vision.py  pydantic_settings.py  requirements.txt  restartApp.bat  routing_fails_audit.txt  test.md  test_phase2_validation.py  (+2 more)
agent_system/: .coverage  .gitignore  DELIVERY_SUMMARY.md  Dockerfile.agents  FINALIZATION_REPORT.md  IMPLEMENTATION_GUIDE.md  PROJECT_MODE_README.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  VERIFICATION_REPORT.txt  docker-compose.agents.yml  pyproject.toml  requirements.txt
agent_system/config/: agents_settings.yaml  langsmith.yaml  tools_permissions.yaml
agent_system/config/prompts/: control.yaml  control_light.yaml  dev.yaml  dev_light.yaml  document_parser.yaml  planning.yaml  planning_light.yaml
agent_system/data/projects/todo_api_test/: project_plan.yaml  project_summary.md
agent_system/data/projects/todo_api_v11/: checkpoint.yaml  project_plan.yaml  project_report.md  project_report.yaml  project_summary.md
agent_system/scripts/: cleanup_test_project.sh  entrypoint.sh  run_orchestrator.py  run_project.py  test_claude_wrapper.py  verify_installation.py
agent_system/specs/: todo_api_example.md
agent_system/src/agents/: __init__.py  base_agent.py  control_agent.py  dev_agent.py  document_parser_agent.py  planning_agent.py
agent_system/src/core/: __init__.py  claude_code_wrapper.py  orchestrator.py  project_orchestrator.py
agent_system/src/models/: __init__.py  agent_state.py  plan.py  project.py  report.py  task.py  tool_result.py
agent_system/src/monitoring/: __init__.py  tracer.py
agent_system/src/tools/: __init__.py  base_tool.py  code_analysis_tool.py  docker_tool.py  filesystem_tool.py  git_tool.py  shell_tool.py  testing_tool.py
agent_system/tests/: conftest.py
agent_system/tests/e2e/: test_complete_workflow.py
agent_system/tests/integration/: test_orchestrator.py
agent_system/tests/unit/: test_models.py  test_todo_model.py  test_tools.py
app/: .dockerignore  Dockerfile  analyze_cache.py  claims_utils.py  entrypoint-worker.sh  import_logging.py  main.py  migrate_to_default_tenant.py  requirements.txt  test_domain_context.py  test_mvp.py  test_neo4j_poc.py
benchmark/: analysis_oracle_baseline_2026-05-04.md  analysis_oracle_claude_vs_judges.md  analyze_lemon_replay.py  analyze_modes.py  audit_failures.py  audit_judge_calibration.py  audit_judge_reliability.py  audit_retrieval_coverage.py  bench_judge_alternatives.py  bench_judge_selene_local.py  bench_models_latency.py  canary_test.py  compare_runs.py  config.yaml  generate_oracle_results.py  perspective_benchmark.py  perspective_quality_diagnostic.py  probe_clusters_validation.py  probe_global_clustering.py  probe_thematic_isolation.py  prototype_hierarchical_clustering.py  quick_test_t6t7.py  reconstruct_slides.py  replay_lemons.py  run_benchmark.py  (+2 more)
(+3423 files in other folders)
